syntax = "proto3";

package journey11.experiment.proto_kafka;

import "state.proto";
import "pb_task.proto";

message Message1 {
    int64 field = 1;
    State state = 2;
    repeated PBTask tasks = 3;
}